kind/02_ingress-nginx/http-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - 
     # this will restrict server hostnames for this service
     # host: HOSTNAME
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: http-echo
              port:
                number: 80
